--- a/index.html
+++ b/index.html
@@ -4,30 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gatitos.com</title>
+    <title>Gatitos</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <main>
-        <section id="container">
-        <article class="cartao">
-            <div class="cartao__conteudo"></div>
-            <h3>Ajuda aos tutores de gatos</h3>
-            <div class="cartao__conteudo__pergunta">
-              Como este conteudo pode ajudar os tutoes de gatos?
-            </div>
-            <div class="cartao__conteudo__resposta">
-                Pode auxiliar principalmente aos novos tutores,mas também aos antigos, a saber se o comportamento dos felinos esta normal, se a alimentação dele esta boa ou até mesmo algumas dicas de como preservar a saude dos gatitos.
-            </div>
-            </div>
-        </article>
+        <section id=”container”>
+            <article class=”cartao”>
+                <div class=”cartao__conteudo”>
+                  <h3>Sobre nós</h3>
+                  <div class=”cartao__conteudo__pergunta”>
+                    Como este site pode ser util para tutores de gato?
+                </div>
+                <div class=”cartao__conteudo__resposta”>
+                    Pode auxiliar principalmente aos novos tutores de gatos,mas tambem aos antigos,a saber como identificar se o comportamento dos felinos está norma, dicas sobre alimentação e saude dos gatitos.
+                    </div>
+                  </div>
+                </article>
+        </section>
+       
+        <section id=”container”>
+            <article class=”cartao”>
+                <div class=”cartao__conteudo”>
+                  <h3>Propósito</h3>
+                  <div class=”cartao__conteudo__pergunta”>
+                    Por que este site foi criado?
+                </div>
+                <div class=”cartao__conteudo__resposta”>
+                    Nossos colaboradore perceberam que certos tutores nao tinham bons cuidados com seus felinos ou até mesmo ficavam muito confusos sobre oque fazer, então esse site foi criado para auxilia-los, como um lugar de conhecimento e direcionamento para os amantes dessas ferinhas, assim indiretamente cuidando dos bichinhos.
+                    </div>
+                  </div>
+            </article>
         </section>
 
     </main>
 
     <footer>
-        <p>Este site foi criado para auxiliar donos de gatos, com dicas de saude, alimentação, comportamento e cudados gerais para gatos. Além de conter fotos fofas de Gatitos.</p>
-
-    </footer>
-
-</body>
-</html>
+        <p> <b>Gatitos.com.br</b>/Dicas de cuidados e criação de gatitos.</p>
+    </footer>   
+    </body>
+</html> 
