--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     Como este site pode ser util para tutores de gato?
                 </div>
                 <div class=”cartao__conteudo__resposta”>
-                    Pode auxiliar principalmente aos novos tutores de gatos,mas tambem aos antigos,a saber como identificar se o comportamento dos felinos está norma, dicas sobre alimentação e saude dos gatitos.
+                  <p>Pode auxiliar principalmente aos novos tutores de gatos,mas tambem aos antigos,a saber como identificar se o comportamento dos felinos está norma, dicas sobre alimentação e saude dos gatitos.</p>  
                     </div>
                   </div>
                 </article>
@@ -31,7 +31,7 @@
                     Por que este site foi criado?
                 </div>
                 <div class=”cartao__conteudo__resposta”>
-                    Nossos colaboradore perceberam que certos tutores nao tinham bons cuidados com seus felinos ou até mesmo ficavam muito confusos sobre oque fazer, então esse site foi criado para auxilia-los, como um lugar de conhecimento e direcionamento para os amantes dessas ferinhas, assim indiretamente cuidando dos bichinhos.
+                <p>    Nossos colaboradore perceberam que certos tutores nao tinham bons cuidados com seus felinos ou até mesmo ficavam muito confusos sobre oque fazer, então esse site foi criado para auxilia-los, como um lugar de conhecimento e direcionamento para os amantes dessas ferinhas, assim indiretamente cuidando dos bichinhos.</p>
                     </div>
                   </div>
             </article>
