--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gatitos</title>
-    <link rel="stylesheet" href="assets/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gatitos</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
-    <main>
-        <section id=”container”>
-            <article class=”cartao”>
-                <div class=”cartao__conteudo”>
-                  <h3>Sobre nós</h3>
-                  <div class=”cartao__conteudo__pergunta”>
-                    Como este site pode ser util para tutores de gato?
-                </div>
-                <div class=”cartao__conteudo__resposta”>
-                  <p>Pode auxiliar principalmente aos novos tutores de gatos,mas tambem aos antigos,a saber como identificar se o comportamento dos felinos está norma, dicas sobre alimentação e saude dos gatitos.</p>  
-                    </div>
-                  </div>
-                </article>
-        </section>
-       
-        <section id=”container”>
-            <article class=”cartao”>
-                <div class=”cartao__conteudo”>
-                  <h3>Propósito</h3>
-                  <div class=”cartao__conteudo__pergunta”>
-                    Por que este site foi criado?
-                </div>
-                <div class=”cartao__conteudo__resposta”>
-                <p>    Nossos colaboradore perceberam que certos tutores nao tinham bons cuidados com seus felinos ou até mesmo ficavam muito confusos sobre oque fazer, então esse site foi criado para auxilia-los, como um lugar de conhecimento e direcionamento para os amantes dessas ferinhas, assim indiretamente cuidando dos bichinhos.</p>
-                    </div>
-                  </div>
-            </article>
-        </section>
+  <main>
+    <section id=”container”>
+      <article class=”cartao”>
+        <div class=”cartao__conteudo”>
+          <h3>Sobre nós</h3>
+          <div class=”cartao__conteudo__pergunta”>
+            <p>Como este site pode ser util para tutores de gato?</p>
+          </div>
+          <div class=”cartao__conteudo__resposta”>
+            <p>Pode auxiliar principalmente aos novos tutores de gatos,mas tambem aos antigos,a saber como identificar
+              se o comportamento dos felinos está norma, dicas sobre alimentação e saude dos gatitos.</p>
+          </div>
+      </article>
+    </section>
 
-    </main>
+    <section id=”container”>
+      <article class=”cartao”>
+        <div class=”cartao__conteudo”>
+          <h3>Propósito</h3>
+          <div class=”cartao__conteudo__pergunta”>
+            Por que este site foi criado?
+          </div>
+          <div class=”cartao__conteudo__resposta”>
+            <p> Nossos colaboradore perceberam que certos tutores nao tinham bons cuidados com seus felinos ou até mesmo
+              ficavam muito confusos sobre oque fazer, então esse site foi criado para auxilia-los, como um lugar de
+              conhecimento e direcionamento para os amantes dessas ferinhas, assim indiretamente cuidando dos bichinhos.</p>
+          </div>
+      </article>
+    </section>
 
-    <footer>
-        <p> <b>Gatitos.com.br</b>/Dicas de cuidados e criação de gatitos.</p>
-    </footer>   
-    </body>
-</html> 
+  </main>
+
+  <footer>
+    <p> <b>Gatitos.com.br</b>/Dicas de cuidados e criação de gatitos.</p>
+  </footer>
+</body>
+
+</html>
